--- a/templates/index.html
+++ b/templates/index.html
@@ -35,5 +35,8 @@
         <small class="subtext">
             David M. Haralson © 2021
         </small>
+        <small class="subtext">
+            Built with <a href="https://www.getzola.org/">Zola</a>
+        </small>
     </footer>
 {% endblock footer %}
