Cleanup & revisions, ready to go

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,12 @@
 {% block hero %}
     <section class="text-center">
         <h1 class="heading-text" style="font-size: 50px">
-            You should hire me
+            David M. Haralson
         </h1>
         <h3 class="title-text">
-            I can do things.
+            electrical engineer<br/>
+            self-taught coder<br/>
+            ready to get to work
         </h3>
     </section>
 
